# neuron

./: .gitignore  .gitmodules  CMakeLists.txt  configure.sh
example/: CMakeLists.txt
example/src/: main.cpp
src/neuron/: neuron.cpp
